--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <div class="capa">
 
             <nav>
-                <input type="checkbox" id="check">
+                <input type="checkbox" id="check" onclick="abreNavbar()">
                 <label for="check" class="checkbtn">
                     <i class="fas fa-bars"></i>
                 </label>
-                <div class="logo">
+                <div class="logo" onclick="scrollTop()">
                     <span>LOGO</span>
                 </div>
 
                 <ul>
-                    <li><a href="#sobre">Sobre</a></li>
-                    <li><a href="#squad">Squad</a></li>
-                    <li><a href="#trabalhos">Trabalhos</a></li>
-                    <li><a href="#contatos">Contato</a></li>
+                    <li><a href="#sobre" onclick="fechaNavbar()">Sobre</a></li>
+                    <li><a href="#squad" onclick="fechaNavbar()">Squad</a></li>
+                    <li><a href="#trabalhos" onclick="fechaNavbar()">Trabalhos</a></li>
+                    <li><a href="#contatos"onclick="fechaNavbar()">Contato</a></li>
                 </ul>
             </nav>
 
