lógica do scroll

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <label for="check" class="checkbtn">
                     <i class="fas fa-bars"></i>
                 </label>
-                <div class="logo" onclick="scrollTop()">
+                <div class="logo" onclick="scroolTop()">
                     <span>LOGO</span>
                 </div>
 
