--- a/index.html
+++ b/index.html
@@ -164,15 +164,16 @@
                     </form>
      
                     <a href="https://api.whatsapp.com/send?1=pt_BR&phone=55024992207409" class="fale-conosco-wpp">
-                        <h1>ou fale conosco diretamente pelo whatsapp</h1>
+                        <h1>ou fale conosco diretamente pelo whatsapp  <i class="fab fa-whatsapp" style="margin-left: 3px;"></i></h1>
                     </a>
+
                 </div>
 
             </section>
         </main>
 
         <footer>
-            <span>&copy; ArtSide  2021 | desenvolvido por <a href="">Alan</a> <i class="fas fa-heart"></i></span>
+            <span>&copy; ArtSide  2021 | desenvolvido por <a href="https://www.linkedin.com/in/alan-oliveira-a606b31b2/ ">Alan</a> <i class="fas fa-heart"></i></span>
         </footer>
     </div>
     
